<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">WELCOME BACK!</string>
    <string name="owner">上善若水的家</string>
    <string name="home_temp">家庭温度</string>
    <string name="home_humidity">家庭湿度</string>
    <string name="rooms">房间</string>
    <string name="bedroom">卧室</string>
    <string name="lounge">客厅</string>
    <string name="kitchen">厨房</string>
    <string name="thermograph">温度</string>
    <string name="thermograph_alt">温度计</string>
    <string name="microphone">话筒</string>
    <string name="humidity">湿度</string>
    <string name="airquality">空气质量</string>
    <string name="pet">宠物投喂</string>
    <string name="clean">清洁机器人</string>
    <string name="homepage">首页</string>
    <string name="device">设备</string>
    <string name="data">数据</string>
    <string name="mine">我的</string>
    <string name="appropriate">适宜</string>
    <string name="good">优</string>
    <string name="my_device">我的设备</string>
    <string name="addition">添加设备</string>
    <string name="all">全部</string>
    <string name="backstep">回退</string>
    <string name="refrigeration">空调</string>
    <string name="intelligent_regulation">智能调节</string>
    <string name="one_touch_switch">一键开关</string>
    <string name="current_indoor_temp">当前室内温度</string>
    <string name="indoor_temp">室内温度</string>
    <string name="current_temp">当前温度</string>
    <string name="preset_temp">预设温度</string>
    <string name="degrees_celsius">℃</string>
    <string name="snowflake">雪花</string>
    <string name="temp_config">温度调节</string>
    <string name="wind_speed_config">风速调节</string>
    <string name="hundred">100</string>
    <string name="zero">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="humidifier">加湿器</string>
    <string name="dehumidify">除湿</string>
    <string name="current_indoor_humidity">当前室内湿度</string>
    <string name="current_humidity">当前湿度</string>
    <string name="preset_humidity">设定湿度</string>
    <string name="pm2.5">PM2.5(ug/m³)</string>
    <string name="air_cond_good">空气优</string>
    <string name="power_off">关闭</string>
    <string name="power_on">开启</string>
    <string name="intel">智能</string>
    <string name="sleep">睡眠</string>
    <string name="purify">净化</string>
    <string name="fan">风扇</string>
    <string name="my_data">我的数据</string>
    <string name="pet_feeding">宠物投喂</string>
    <string name="family_member">家庭成员</string>
    <string name="family_name">家庭名称</string>
    <string name="family_device">家庭设备</string>
    <string name="family_room">家庭房间</string>
    <string name="service_center">服务中心</string>
    <string name="help_center">帮助中心</string>
</resources>