<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottombar"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:cardBackgroundColor="@color/lavender"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/homepageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="-10dp"
        android:text="@string/homepage"
        android:textAppearance="@style/sourcehanserif"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/homepage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottombar" />


    <TextView
        android:id="@+id/deviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawablePadding="-10dp"
        android:text="@string/device"
        android:textAppearance="@style/sourcehanserif"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/device"
        app:layout_constraintBottom_toBottomOf="@id/homepageText"
        app:layout_constraintEnd_toStartOf="@id/dataText"
        app:layout_constraintStart_toEndOf="@id/homepageText" />

    <TextView
        android:id="@+id/dataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawablePadding="-10dp"
        android:text="@string/data"
        android:textAppearance="@style/sourcehanserif"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/data"
        app:layout_constraintBottom_toBottomOf="@id/homepageText"
        app:layout_constraintEnd_toStartOf="@id/mineText"
        app:layout_constraintStart_toEndOf="@id/deviceText" />

    <TextView
        android:id="@+id/mineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="31dp"
        android:drawablePadding="-10dp"
        android:text="@string/mine"
        android:textAppearance="@style/sourcehanserif"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/mine"
        app:layout_constraintBottom_toBottomOf="@id/homepageText"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>