<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dataPageFragment">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/round1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/lightgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/circle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/myDeviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:gravity="top"
        android:text="@string/my_data"
        android:textAppearance="@style/sourcehansans"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/round1"
        app:layout_constraintStart_toEndOf="@id/round1"
        app:layout_constraintTop_toTopOf="@id/round1" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
            android:textAppearance="@font/sourcehansans"
        android:textSize="20sp"
        android:text="@string/thermograph"
        app:layout_constraintTop_toBottomOf="@id/round1"
        app:layout_constraintEnd_toStartOf="@id/humidityText"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/humidityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="@font/sourcehansans"
        android:textSize="20sp"
        android:text="@string/humidity"
        app:layout_constraintTop_toBottomOf="@id/round1"
        app:layout_constraintStart_toEndOf="@id/tempText"
        app:layout_constraintEnd_toStartOf="@id/airCondText"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/airCondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="@font/sourcehansans"
        android:textSize="20sp"
        android:text="@string/airquality"
        app:layout_constraintTop_toBottomOf="@id/round1"
        app:layout_constraintStart_toEndOf="@id/humidityText"
        app:layout_constraintEnd_toStartOf="@id/petFeedingText"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/petFeedingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="@font/sourcehansans"
        android:textSize="20sp"
        android:text="@string/pet_feeding"
        app:layout_constraintTop_toBottomOf="@id/round1"
        app:layout_constraintStart_toEndOf="@id/airCondText"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="30dp"
        android:layout_height="4dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tempText"
        app:layout_constraintStart_toStartOf="@id/tempText"
        app:layout_constraintEnd_toEndOf="@id/tempText"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="373dp"
        android:layout_height="240dp"
        app:strokeWidth="0dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="33dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tempText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>